2003-11-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (__mloop_handle_event):
	* fvwm/menustyle.c (menustyle_parse_style):
	(menustyle_copy):
	new MenuStyle options PopupIgnore and PopupClose

2003-11-02  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/menus.c (menu_binding): Remove debug code.
	* fvwm/bindings.c (ParseBinding): Hand off menu bindings to menu code.
	* fvwm/menus.h: Add menu_binding function.
	* fvwm/fvwm.1.in: Document the menu context in the mouse command for
	tear off menus.
	* fvwm/menus.c (__mloop_handle_event): Really crude ability to disable
	button 2 tearoff.
	* libs/wcontext.h (enum): Add MENU context.
	* libs/wcontext.c (win_contexts): More common binding contexts first in
	table.
	* libs/charmap.c (charmap_string_to_mask): Space before char in error
	message.

2003-11-01  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* configure.in:
	increase version to 2.5.9

2003-10-31  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	fixed deb creation

	* configure.in:
	* NEWS:
	updated for 2.5.8 release

2003-10-29  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	* configure.in:
	initially added files for deb package auto-creating procedure

2003-10-26  Mikhael Goikhman  <migo@homemail.com>

	* AUTHORS:
	* configure.in:
	added Swedish translations by Johan Svedberg

	* NEWS:
	updated

2003-10-25  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/add_window.c (GetWindowSizeHints):
	reindented broken hint messages

2003-10-23  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	improved Perl detection messages,
	restored FvwmGtkDebug independence from gtk libs

2003-10-15  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* AUTHORS:
	added German translations by Andrei Mitrofanow

	* fvwm/fvwm.1.in:
	typos

2003-10-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	added 2.4.17 NEWS

2003-09-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	* fvwm/conditional.c (CreateConditionMask):