@@ -1,3 +1,8 @@
+2003-11-07  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* configure.in:
+	new configure option --en/disable-iconv
+
 2003-11-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (__mloop_handle_event):
